[gd_scene load_steps=2 format=3 uid="uid://cfjcdy2btrdt2"]

[ext_resource type="Script" uid="uid://b1sc8dv21dxy3" path="res://scripts/second_scene.gd" id="1_efdx0"]

[node name="Second" type="Node2D"]
script = ExtResource("1_efdx0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_top = 16.0
offset_right = 29.5
offset_bottom = 39.0
grow_horizontal = 2
text = "Escena 2"

[node name="NavigateButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 543.0
offset_top = 555.0
offset_right = 647.0
offset_bottom = 586.0
text = "Ir a Escena 1"

[node name="Button1" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 137.0
offset_top = 170.0
offset_right = 212.0
offset_bottom = 201.0
text = "Sonido 1"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 139.0
offset_top = 208.0
offset_right = 214.0
offset_bottom = 239.0
text = "Sonido 2"

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 143.0
offset_top = 249.0
offset_right = 218.0
offset_bottom = 280.0
text = "Sonido 3"

[connection signal="pressed" from="CanvasLayer/Control/NavigateButton" to="." method="_on_navigate_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button3" to="." method="_on_button_3_pressed"]
